# home_vacuum_cleaner_v3

./: .gitignore  CMakeLists.txt  Known Issues Ex3- _208748665_206476079_.xlsx  Known Issues Ex3-208748665_206476079.xlsx  Makefile  README.md  bonus.txt  build.sh  input_a.txt  input_b.txt  myrobot  params.config
houses/: input_c.house
src/: Path.cpp  Path.h  args_parser.cpp  args_parser.h  house.cpp  house.h  io_handling.cpp  io_handling.h  live_simulator.cpp  live_simulator.h  logger.cpp  logger.h  main.cpp  simulator.cpp  simulator.h  speedom_algorithm.cpp  speedom_algorithm.h  status.h
src/algorithm/: abstract_speedom_algorithm.cpp  abstract_speedom_algorithm.h  random_speedom_algorithm.cpp  random_speedom_algorithm.h  speedom_algorithm.cpp  speedom_algorithm.h
src/common/: AlgorithmRegistrar.h  battery_meter_imp.cpp  battery_meter_imp.h  battery_meter_impl.cpp  battery_meter_impl.h  consts.h  dirt_sensor_imp.cpp  dirt_sensor_imp.h  dirt_sensor_impl.cpp  dirt_sensor_impl.h  house.cpp  location.h  logger.cpp  logger.h  wall_sensor_impl.cpp  wall_sensor_impl.h  walls_sensor_imp.cpp  walls_sensor_imp.h
src/sensors/: battery_meter_imp.cpp  battery_meter_imp.h  dirt_sensor_imp.cpp  dirt_sensor_imp.h  walls_sensor_imp.cpp  walls_sensor_imp.h
src/simulator/: Path.cpp  Path.h  args_parser.cpp  args_parser.h  config_reader.cpp  config_reader.h  house.cpp  house.h  io_handling.cpp  io_handling.h  live_simulator.cpp  live_simulator.h  simulations_manager.cpp  simulations_manager.h  simulator.cpp  simulator.h  status.h
src/skelaton/: abstract_algorithm.h
tests/: test_main.cpp  test_simulator.cpp  test_simulator.h
